<resources>
    <string name="app_name">Kamandanoe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="detail">Detail</string>
    <string name="history">History</string>
    <string name="location">Location</string>
    <string name="admin">Admin</string>
    <string name="logout">Logout</string>

    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_detail">Detail</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_change_profile">Change Profile</string>
    <string name="title_bukti">Bukti</string>

    <string name="margajaya">Margajaya</string>
    <string name="alamat_marga">Alamat Margajaya </string>
    <string name="jam_buka">08.00 – 23.00 </string>

    <string name="login_title">SignIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="telephone">Telephone</string>
    <string name="username">Username</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register_title">SignUp</string>

    <string name="rating_marga">4.4</string>
    <string name="jam_marga">08:00 - 23:00 WIB</string>

    <string name="histori">History</string>
    <string name="profil">Profile</string>
    <string name="role">Role</string>
    <string name="nb">*Jika ketika hari pesan/sewa tidak bisa datang,bisa merubah jadwal sewa pada h-1 sebelum hari sewa.</string>
    <string name="nb2">*Perubahan jadwal tersebut akan dilayani oleh Admin melalui whatsapp yang tertera pada menu pojok kiri atas .</string>
    <string name="no_internet">no_internet_image_desc</string>

    <string name="session_expired_title">Session Expired</string>
    <string name="session_expired_message">Your session has expired. Please login again.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="error_default_message">An error occurred. Please try again later.</string>

    <string name="say_hello_home">Booking lapangan jadi lebih gampang di Jawara Kalasan </string>

    <string name="image_description">Image</string>
    <string name="jenis_lap">Jenis Lapangan</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>

</resources>