<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmarga">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:text="BUKTI SEWA"
            android:textSize="45sp" />

        <!--    <com.airbnb.lottie.LottieAnimationView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="75dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/success"
            app:lottie_speed="1.25" />-->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="230dp"
            android:text="JENIS LAPANGAN"
            android:textSize="14sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tv_jenbukti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="227dp"
            android:layout_marginEnd="60dp"
            android:text="Lapangan 1"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="270dp"
            android:text="JAM ATAU SESI"
            android:textSize="14sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tv_jambukti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="267dp"
            android:layout_marginEnd="60dp"
            android:text="@string/jam_marga"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="310dp"
            android:text="HARI,TANGGAL"
            android:textSize="14sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tv_haribukti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="307dp"
            android:layout_marginEnd="60dp"
            android:text="Sat 03 Dec 2023"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="350dp"
            android:text="HARGA LAPANGAN"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_hargabukti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="347dp"
            android:layout_marginEnd="60dp"
            android:text="Rp.40.000/sesi"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="390dp"
            android:text="HARI PESAN"
            android:textSize="14sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tv_waktupesanbukti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="387dp"
            android:layout_marginEnd="60dp"
            android:text="03 Dec 2024,13:40"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="445dp"
            android:layout_marginEnd="30dp"
            android:text="@string/nb"
            android:textSize="10sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="472dp"
            android:layout_marginEnd="30dp"
            android:text="@string/nb2"
            android:textSize="10sp"
            android:textStyle="italic" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>